--- a/38-figureS4P-tableS5-UC-TCRs.Rmd
+++ b/38-figureS4P-tableS5-UC-TCRs.Rmd
@@ -26,6 +26,7 @@ figures_path <- file.path("figures", "UC")
 Data were downloaded from https://clients.adaptivebiotech.com/pub/werner-2018-clinexpimmunol and moved to `data/UC_raw_TCR_data`
 
 TCR JSDs were calculated similar to the description in 00-preprocess-TCR:
+
 ```
 bash scripts/get_file_pairs.sh ./data/UC_raw_TCR_data/ > UC_file_pairs.tsv
 parallel -a UC_file_pairs.tsv --bar --progress --colsep "\t" ~/miniconda3/envs/pd/bin/python scripts/AB-correlations.py {1} {2} > data/2022-10-12-UC-tcr-correlations.tsv
@@ -467,14 +468,16 @@ clonotype_data <- uc_msk_joined_clonotype_data  %>%
            ungroup() %>% 
            mutate(relab_abundance_cat = case_when(
              max_cdr3_perc >= 5 ~ ">= 5%",
-             max_cdr3_perc >= 1 ~ "(5% - 1%]",
-             max_cdr3_perc >= .5 ~ "(1% - 0.5%]",
+             max_cdr3_perc >= 1 ~ "[1% - 5%)",
+             max_cdr3_perc >= .5 ~ "[0.5% - 1%)",
              TRUE ~ "< 0.5%",
              ))
 p_clonotyes_by_tissue_heatmap_by_rank <- ggplot(clonotype_data %>% filter(Pathology != "Unknown", Pathology != "Encounter for immunization") , 
        aes(y=tissue_label_fig1, x=reorder(str_wrap(Pathology, 45), yorder), color = reorder(relab_abundance_cat, max_cdr3_perc))) +
   geom_point() + 
-  scale_color_manual(values=c("grey90", "grey60", "navy", "lightblue")) + 
+  scale_color_manual(values=c("grey90", "grey70", "grey50", "grey30")) +
+  # scale_color_manual(values=c("grey90", "grey60", "navy", "lightblue")) + 
+  # scale_fill_manual(values=c(NA, NA, "navy", "lightblue")) + 
   facet_grid(cohort+indv_label ~ Category, space="free", scales = "free") +
   theme(text = element_text(size=6), axis.text.x = element_text(angle=45, hjust=1), strip.text = element_text(size=6),
         strip.background = element_rect(color="grey80"), 
